Major flex Milestones hit

--- a/index.html
+++ b/index.html
@@ -14,44 +14,49 @@
 
   <body>
     <header></header>
-    <main>
-      <section id="top">
+    <main class="main-container">
+      <div class="top">
+        <div class="top-img">
         <div>
           <h3>HEATING AND AIR CONDITIONING SERVICES</h3>
         </div>
         <div class="container">
           <div class="subtitles">
-            <img src="./img/heating.png" alt="heating" aria-label="Heating" />
-            <p>Heating</p>
+            <a href="#"><img src="./img/heating.png" alt="heating" aria-label="Heating" />
+              <p>Heating</p>
+          </a>
           </div>
           <div class="subtitles">
-            <img src="./img/cooling.png" alt="Cooling" aria-label="cooling" />
-            <p>Cooling</p>
+            <a href="#"><img src="./img/cooling.png" alt="Cooling" aria-label="cooling" />
+            <p>Cooling</p></a>
           </div>
           <div class="subtitles">
-            <img
+            <a href="#"><img
               src="./img/specials.png"
               alt="Specials"
               aria-label="Specials"
             />
-            <p>Specials</p>
+            <p>Specials</p></a>
           </div>
           <div class="subtitles">
-            <img
+            <a href="#"><img
               src="./img/plumber-arlington-tx.png"
               alt="Plumber Arlington"
               aria-label="Plumber Arlington"
             />
-            <p>FOR PLUMBING</p>
+            <p>FOR PLUMBING</p></a>
           </div>
-          <img
+        </div></div>
+        <div class="map">
+            <img
           src="./img/sub_map.jpg"
           alt="Minuteman Heating & Air"
           aria-label="Map"
         />
-        </div>
-      </section>
-      <section id="service-area">
+         </div>
+          
+      </div>
+      <div class="service-area">
         <div>
           <h1>Our Service Area</h1>
         </div>
@@ -68,7 +73,7 @@
             Minuteman Heating & Air serves Fort Worth, Arlington, Aleda, Alvarado and the surrounding areas with first quality services you can rely upon. Our certified technicians have the experience necessary to ensure a professional repair, installation and maintenance of your <strong>heating and air conditioning</strong> system, and the skills needed to ensure the job is done right the first time. You are our first priority, and we are dedicated to your comfort and satisfaction. Contact us today to schedule your service, or a free estimate for a new <strong>HVAC</strong> system for residential or
             commercial applications. 
             
-            <div>
+            <div class="read-more">
                 <a href="#">Furnace Repair Service Areas</a><br>
                 <a href="#">Air Conditioning Repair Service Areas</a>
             </div>
@@ -76,8 +81,8 @@
           </p>
           </div>
         </div>
-      </section>
-      <section id="helpful-articles">
+      </div>
+      <div class="helpful-articles">
         <div>
           <div>
             <h2>Helpful Heating and Air Articles</h2>
@@ -95,7 +100,7 @@
                 were looking at the importance of heating, ventilation, and air
                 conditioning (HVAC) contractors. In this ...
               </p>
-              <span><a href="#">Read More</a></span>
+              <div class="read-more"><a href="#">Read More</a></div>
             </div>
             <div>
               <a href="#">
@@ -109,7 +114,7 @@
                 homeowners all winter, no matter how cold it is. Many people who
                 have multi-level ...
               </p>
-              <span><a href="#">Read More</a></span>
+              <div class="read-more"><a href="#">Read More</a></div>
             </div>
             <div>
               <a href="#">
@@ -123,11 +128,11 @@
                 been, for the most part, pretty darn warm (knock on wood).
                 There's still some cold days ...
               </p>
-              <span><a href="#">Read More</a></span>
+              <div class="read-more"><a href="#">Read More</a></div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </main>
     <footer></footer>
   </body>
